[gd_scene load_steps=43 format=3 uid="uid://cjiaxsnfk81rp"]

[ext_resource type="Script" path="res://hisami3.gd" id="1_1djo1"]
[ext_resource type="Texture2D" uid="uid://bqseghcm5nr5n" path="res://Shadow.png" id="2_6nnxd"]
[ext_resource type="Texture2D" uid="uid://cg5m3tatjr5wy" path="res://hisami_death.png" id="3_lqoos"]
[ext_resource type="Texture2D" uid="uid://bxbwe12giqhb3" path="res://Sprite_Hisami-Sheet.png" id="4_1gt50"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l5i4b"]
size = Vector2(12, 12)

[sub_resource type="Animation" id="Animation_o7p8r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"right"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_difa1"]
resource_name = "die"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"die"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_4nj74"]
resource_name = "down"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"down"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_t4dib"]
resource_name = "left"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"left"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_77365"]
resource_name = "right"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"right"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_381ss"]
resource_name = "up"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"up"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cba3f"]
_data = {
"RESET": SubResource("Animation_o7p8r"),
"die": SubResource("Animation_difa1"),
"down": SubResource("Animation_4nj74"),
"left": SubResource("Animation_t4dib"),
"right": SubResource("Animation_77365"),
"up": SubResource("Animation_381ss")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ie1ma"]
animation = &"die"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_245ei"]
animation = &"down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0bfuw"]
animation = &"up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_a84rd"]
animation = &"right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jb7mk"]
animation = &"left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_wtctx"]
blend_point_0/node = SubResource("AnimationNodeAnimation_245ei")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_0bfuw")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_a84rd")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_jb7mk")
blend_point_3/pos = Vector2(-1, 0)
snap = Vector2(1, 1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bqvwi"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5pptb"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qemck"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_nu0dl"]
states/die/node = SubResource("AnimationNodeAnimation_ie1ma")
states/die/position = Vector2(559, 96)
states/walk/node = SubResource("AnimationNodeBlendSpace2D_wtctx")
states/walk/position = Vector2(421, 118)
transitions = ["Start", "walk", SubResource("AnimationNodeStateMachineTransition_bqvwi"), "walk", "die", SubResource("AnimationNodeStateMachineTransition_5pptb"), "die", "End", SubResource("AnimationNodeStateMachineTransition_qemck")]

[sub_resource type="AtlasTexture" id="AtlasTexture_ebopr"]
atlas = ExtResource("3_lqoos")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfxjm"]
atlas = ExtResource("3_lqoos")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wxtc"]
atlas = ExtResource("4_1gt50")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgcte"]
atlas = ExtResource("4_1gt50")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnkx1"]
atlas = ExtResource("4_1gt50")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nd1ga"]
atlas = ExtResource("4_1gt50")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fp24t"]
atlas = ExtResource("4_1gt50")
region = Rect2(16, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovshm"]
atlas = ExtResource("4_1gt50")
region = Rect2(32, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2f4d1"]
atlas = ExtResource("4_1gt50")
region = Rect2(48, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yebq4"]
atlas = ExtResource("4_1gt50")
region = Rect2(0, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6vwj"]
atlas = ExtResource("4_1gt50")
region = Rect2(16, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3viwu"]
atlas = ExtResource("4_1gt50")
region = Rect2(32, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rk4yw"]
atlas = ExtResource("4_1gt50")
region = Rect2(48, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mxvs"]
atlas = ExtResource("4_1gt50")
region = Rect2(0, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h07tu"]
atlas = ExtResource("4_1gt50")
region = Rect2(16, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nmkn"]
atlas = ExtResource("4_1gt50")
region = Rect2(32, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mj1k4"]
atlas = ExtResource("4_1gt50")
region = Rect2(48, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yoa7"]
atlas = ExtResource("4_1gt50")
region = Rect2(0, 64, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_r7s3w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebopr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfxjm")
}],
"loop": true,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wxtc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgcte")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnkx1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nd1ga")
}],
"loop": true,
"name": &"down",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fp24t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovshm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2f4d1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yebq4")
}],
"loop": true,
"name": &"left",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6vwj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3viwu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rk4yw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mxvs")
}],
"loop": true,
"name": &"right",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h07tu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nmkn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mj1k4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yoa7")
}],
"loop": true,
"name": &"up",
"speed": 2.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x32wa"]
size = Vector2(16, 16)

[node name="hisami" type="CharacterBody2D" groups=["enemy"]]
z_index = 2
y_sort_enabled = true
collision_layer = 48
collision_mask = 16
motion_mode = 1
script = ExtResource("1_1djo1")

[node name="shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.498039)
texture = ExtResource("2_6nnxd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_l5i4b")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cba3f")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_nu0dl")
anim_player = NodePath("../AnimationPlayer")
parameters/walk/blend_position = Vector2(-0.25941, -0.248677)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
sprite_frames = SubResource("SpriteFrames_r7s3w")
animation = &"right"
offset = Vector2(0, -8)

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("RectangleShape2D_x32wa")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="TimerBamboo" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TimerBamboo" to="." method="_on_timer_bamboo_timeout"]
